tests/SyntaxError/Test8/test7.c
int main(){

funt(1,2);
}

int funt(int a, int b,){

return a*b;
}
